--- a/views/promotions.jade
+++ b/views/promotions.jade
@@ -2,6 +2,7 @@ extends layout
 
 block content
     div.form-group
-        label(for='messageInput') Enter promotional message
-        textarea.form-control(rows='3', id='messageInput')
-        button(type='submit').btn.btn-primary.send-button Send
+        form(action='/promotions/send',method='post')
+            label(for='messageInput') Enter promotional message
+            textarea.form-control(rows='3', id='messageInput', type ='text', name ='messageInput')
+            button(type='submit').btn.btn-primary.send-button   Send
