--- a/views/index.jade
+++ b/views/index.jade
@@ -4,14 +4,14 @@ block content
   table.table.table-striped.table-hover.table-bordered
     thread
       tr
-        th #
+        th #Ref ID
         th Mobile number
         th.message-col Message
         th Date
     tbody
       each feed, i in feedback
         tr
-          td #{i + 1}
+          td #{i}
           td #{feed.mobileNo}
           td.message-col #{feed.message}
-          td 8292828
+          td #{feed.date}
