--- a/views/flavours.jade
+++ b/views/flavours.jade
@@ -2,23 +2,15 @@ extends layout
 
 block content
     table.table.table-striped.table-hover.table-bordered
-        tr
-            th #
-            th.flavour-name-col Flavour name
-            th.ingredients-col Ingredients
-            th Description
-        tr
-            td 1
-            td Almond
-            td Almond, Coffee, Sugar, Java nuts
-            td Flavoring coffee dates back to the Arabs in Yemen who from the very beginning began adding spices while the coffee was brewing. Today we use natural and natural identical flavorings to create some of the most unique coffees in the world. We flavor only premium, high-grown, and 100% Arabica coffees. Treat yourself and your guests to superior coffee.
-        tr
-            td 2
-            td Almond
-            td Almond, Coffee, Sugar, Java nuts
-            td Flavoring coffee dates back to the Arabs in Yemen who from the very beginning began adding spices while the coffee was brewing. Today we use natural and natural identical flavorings to create some of the most unique coffees in the world. We flavor only premium, high-grown, and 100% Arabica coffees. Treat yourself and your guests to superior coffee.
-        tr
-            td 3
-            td Almond
-            td Almond, Coffee, Sugar, Java nuts
-            td Flavoring coffee dates back to the Arabs in Yemen who from the very beginning began adding spices while the coffee was brewing. Today we use natural and natural identical flavorings to create some of the most unique coffees in the world. We flavor only premium, high-grown, and 100% Arabica coffees. Treat yourself and your guests to superior coffee.
+        thead
+            tr
+                th #
+                th.flavour-name-col Coffee name
+                th.ingredients-col Price
+
+        tbody
+            each flavor, i in flavors
+                tr
+                    td #{i}
+                    td.message-col #{flavor.name}
+                    td #{flavor.price}
