--- a/views/payments.jade
+++ b/views/payments.jade
@@ -4,7 +4,8 @@ block content
     table.table.table-striped.table-hover.table-bordered
         thead
             tr
-                th #Ref ID
+                th #
+                th Ref ID
                 th Mobile number
                 th Amount
                 th Priority
@@ -12,6 +13,7 @@ block content
         tbody
             each payment, i in payments
                 tr
+                    td #{index++}
                     td #{i}
                     td #{payment.mobileNo}
                     td #{payment.amount}
